--- a/front/package.json
+++ b/front/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tinymce/tinymce-react": "^4.2.0",
+    "fs-extra": "^10.1.0",
     "quill": "^1.3.6",
     "quill-image-uploader": "^1.2.3",
     "react": "^18.2.0",
@@ -13,6 +15,7 @@
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "tinymce": "^6.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
