Updating Server index

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 port = 4000
-URL = mongodb+srv://VisvShah:VisvShah123@cluster0.uoxuqu4.mongodb.net/?retryWrites=true&w=majority
+URL = mongodb+srv://VisvShah:VisvShah@cluster0.umuygpo.mongodb.net/?retryWrites=true&w=majority
