--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,1 @@
-port = 4000
-URL = mongodb+srv://VisvShah:VisvShah@cluster0.umuygpo.mongodb.net/?retryWrites=true&w=majority
+MONGO_URL = mongodb+srv://VisvShah:VisvShah@cluster0.umuygpo.mongodb.net/?retryWrites=true&w=majority
