Updated Port and Established MongoDB connection

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
-MONGO_URL = mongodb+srv://VisvShah:VisvShah@cluster0.umuygpo.mongodb.net/?retryWrites=true&w=majority
+MONGO_URL = "mongodb+srv://VisvShah123:VisvShah123123@cluster0.jc5xgwx.mongodb.net/?retryWrites=true&w=majority"
+//Used visvshah2@gmail.com for cluster
