--- a/front/package.json
+++ b/front/package.json
@@ -8,12 +8,13 @@
     "@testing-library/user-event": "^13.5.0",
     "@tinymce/tinymce-react": "^4.2.0",
     "fs-extra": "^10.1.0",
+    "jwt-decode": "^3.1.2",
     "quill": "^1.3.6",
     "quill-image-uploader": "^1.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-quill": "^2.0.0",
-    "react-router-dom": "^6.4.2",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "tinymce": "^6.2.0",
     "web-vitals": "^2.1.4"
