--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.7",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "react-router-dom": "^6.4.3"
   }
 }
